<resources>

    <string name="app_name">ふせんカレンダー</string>

    <!-- BottomNavigation item -->
    <string name="title_calendar">カレンダー</string>
    <string name="title_fusen">ふせん</string>
    <string name="title_setting">設定</string>

    <!-- SettingFragment -->
    <string name="setting_menu_slide">カレンダーのスライドの向き</string>
    <string name="setting_menu_slide_text">スライド方向</string>
    <string name="slide_direction_horizontal">縦</string>
    <string name="slide_direction_vertical">横</string>
    <string name="setting_menu_alarm">イベント通知時間</string>
    <string name="setting_menu_help">使い方ガイド</string>
    <string name="date_Edit">2020/0610/</string>
    <string name="time_Edit">14:58</string>
    <string name="title_Edit">タイトル</string>
    <string name="memo_Edit">メモ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>