<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_first">

    <fragment
        android:id="@+id/navigation_first"
        android:name="com.example.y.fusencalendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_second"
        android:name="com.example.y.fusencalendar.FusenFragment"
        android:label="@string/title_fusen"
        tools:layout="@layout/fragment_fusen" />

    <fragment
        android:id="@+id/navigation_third"
        android:name="com.example.y.fusencalendar.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>